--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "react-qr-barcode-scanner",
+  "name": "@steima/react-qr-barcode-scanner",
   "version": "1.1.0",
   "description": "A simple React Component using the client's webcam to read barcodes and QR codes.",
   "main": "dist/index.js",
